--- a/Backend/.prettierrc
+++ b/Backend/.prettierrc
@@ -2,7 +2,7 @@
   "printWidth": 100,
   "tabWidth": 2,
   "useTabs": false,
-  "singleQuote": true,
+  "singleQuote": false,
   "trailingComma": "all",
   "arrowParens": "always",
   "semi": false,
