--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,6 +21,7 @@
     "url": "https://github.com/RomaLetodiani/Node-Express-TypeScript-BoilerPlate/issues"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
