--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "node-express-typescript-boilerplate",
+  "name": "github-leetcode-backend",
   "version": "1.0.0",
   "description": "Node Express TypeScript Boilerplate",
   "main": "index.js",
   "scripts": {
     "start": "node dist/index.js",
-    "build": "tsc && cp -r dist/* public",
+    "build": "tsc",
     "dev": "nodemon src/index.ts",
     "test": "jest"
   },
