--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -1,9 +1,17 @@
 {
   "compilerOptions": {
+    "module": "commonjs",
     "esModuleInterop": true,
-    "module": "commonJS",
+    "allowSyntheticDefaultImports": true,
+    "target": "es6",
+    "noImplicitAny": true,
     "moduleResolution": "node",
+    "sourceMap": true,
     "outDir": "dist",
-    "strict": true
-  }
+    "baseUrl": ".",
+    "paths": {
+      "*": ["node_modules/*", "src/types/*"]
+    }
+  },
+  "include": ["./src/**/*"]
 }
